minishift/templates/intygsbestallning/deploy/deploymentconfig-intygsbestallning.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  generation: 1
  labels:
    app: intygsbestallning
    environment: test
  name: intygsbestallning
spec:
  replicas: 1
  selector:
    app: intygsbestallning
    deploymentconfig: intygsbestallning
  template:
    metadata:
      labels:
        app: intygsbestallning
        deploymentconfig: intygsbestallning
        environment: test
    spec:
      containers:
      - env:
        - name: APP_JVM_ENV
          value: -Ddb_server=$DB_SERVER -Ddb_port=$DB_PORT -Ddb_name=$DB_NAME -Ddb_username=$DB_USERNAME -Ddb_password=$DB_PASSWORD -Damq_username=$ACTIVEMQ_USERNAME -Damq_password=$ACTIVEMQ_PASSWORD -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5008 -Dib.stubs.port=8080 -Dcertificate.folder=/opt/inera/certifikat -Dconfig.folder=/opt/inera/intygsbestallning-konfiguration -Dresources.folder=/opt/inera/resources -Dcredentials.file=/opt/inera/credentials/credentials.properties -Dcon [...]
        - name: ACTIVE_SPRING_PROFILES
          value: test,caching-enabled,ib-stub,wc-hsa-stub,wc-pu-stub,testability-api,ib-security-dev
        - name: DB_SERVER
          value: mysql
        - name: DB_PORT
          value: '3306'
        - name: DB_NAME
          value: intygsbestallning
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              name: intygsbestallning-db-credentials
              key: db_username
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: intygsbestallning-db-credentials
              key: db_password
        - name: ACTIVEMQ_USERNAME
          valueFrom:
            secretKeyRef:
              name: intygsbestallning-db-credentials
              key: amq_username
        - name: ACTIVEMQ_PASSWORD
          valueFrom:
            secretKeyRef:
              name: intygsbestallning-db-credentials
              key: amq_password
        image: 172.30.1.1:5000/intygstjanster-demo/intygsbestallning:latest
        imagePullPolicy: Always
        name: intygsbestallning
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 5010
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/inera/intygsbestallning-konfiguration
          name: intygsbestallning-test-konfiguration
          readOnly: true
        - mountPath: /opt/inera/certifikat
          name: intygsbestallning-certifikat
          readOnly: true
        - mountPath: /opt/inera/credentials
          name: intygsbestallning-credentials
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
       - configMap:
           defaultMode: 420
           name: intygsbestallning-test-konfiguration
         name: intygsbestallning-test-konfiguration
       - name: intygsbestallning-certifikat
         secret:
           defaultMode: 420
           secretName: intygsbestallning-certifikat
       - name: intygsbestallning-credentials
         secret:
           defaultMode: 420
           secretName: intygsbestallning-credentials
  test: false
