minishift/templates/intygsbestallning/deploy/service-intygsbestallning.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: intygsbestallning
  name: intygsbestallning
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 5010-tcp
    port: 5010
    protocol: TCP
    targetPort: 5010
  selector:
    deploymentconfig: intygsbestallning
  sessionAffinity: None
  type: ClusterIP
